--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -1,4 +1,34 @@
 {
+  "Community Governance": {
+    "message": "Community Governance"
+  },
+  "Everything you should know about the $Li and Snowflake Foundation": {
+    "message": "Everything you should know about the $Li and Snowflake Foundation"
+  },
+  "Fight for Free Speech": {
+    "message": "Fight for Free Speech"
+  },
+  "How to Contribute": {
+    "message": "How to Contribute"
+  },
+  "Join a decentralized community committed to democratic values": {
+    "message": "Join a decentralized community committed to democratic values"
+  },
+  "Learn about blockchain technology and how it empowers freedom of information": {
+    "message": "Learn about blockchain technology and how it empowers freedom of information"
+  },
+  "Novice of Blockchain": {
+    "message": "Novice of Blockchain"
+  },
+  "Start Reading": {
+    "message": "Start Reading"
+  },
+  "Suggest Changes": {
+    "message": "Suggest Changes"
+  },
+  "Support uncensored news and protect voices in restricted regions": {
+    "message": "Support uncensored news and protect voices in restricted regions"
+  },
   "theme.AnnouncementBar.closeButtonAriaLabel": {
     "description": "The ARIA label for close button of announcement bar",
     "message": "Close"
