--- a/i18n/zh-CN/code.json
+++ b/i18n/zh-CN/code.json
@@ -1,4 +1,34 @@
 {
+  "Community Governance": {
+    "message": "社区治理"
+  },
+  "Everything you should know about the $Li and Snowflake Foundation": {
+    "message": "了解关于 $Li 和雪花基金会的一切"
+  },
+  "Fight for Free Speech": {
+    "message": "为言论自由而战"
+  },
+  "How to Contribute": {
+    "message": "如何贡献"
+  },
+  "Join a decentralized community committed to democratic values": {
+    "message": "加入一个去中心化的社区，致力于民主价值"
+  },
+  "Learn about blockchain technology and how it empowers freedom of information": {
+    "message": "了解区块链技术如何赋予信息自由"
+  },
+  "Novice of Blockchain": {
+    "message": "区块链新手"
+  },
+  "Start Reading": {
+    "message": "开始阅读"
+  },
+  "Suggest Changes": {
+    "message": "提出修改建议"
+  },
+  "Support uncensored news and protect voices in restricted regions": {
+    "message": "支持未被审查的新闻，保护受限地区的声音"
+  },
   "theme.AnnouncementBar.closeButtonAriaLabel": {
     "description": "The ARIA label for close button of announcement bar",
     "message": "关闭"
