--- a/i18n/zh-TW/code.json
+++ b/i18n/zh-TW/code.json
@@ -1,4 +1,34 @@
 {
+  "Community Governance": {
+    "message": "社區治理"
+  },
+  "Everything you should know about the $Li and Snowflake Foundation": {
+    "message": "了解關於 $Li 和雪花基金會的一切"
+  },
+  "Fight for Free Speech": {
+    "message": "為言論自由而戰"
+  },
+  "How to Contribute": {
+    "message": "如何貢獻"
+  },
+  "Join a decentralized community committed to democratic values": {
+    "message": "加入一個去中心化的社區，致力於民主價值"
+  },
+  "Learn about blockchain technology and how it empowers freedom of information": {
+    "message": "了解區塊鏈技術如何賦予信息自由"
+  },
+  "Novice of Blockchain": {
+    "message": "區塊鏈新手"
+  },
+  "Start Reading": {
+    "message": "開始閱讀"
+  },
+  "Suggest Changes": {
+    "message": "提出修改建議"
+  },
+  "Support uncensored news and protect voices in restricted regions": {
+    "message": "支持未被审查的新闻，保护受限地区的声音"
+  },
   "theme.AnnouncementBar.closeButtonAriaLabel": {
     "description": "The ARIA label for close button of announcement bar",
     "message": "關閉"
